--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div><h1>I</h1></div>
+    <div><h1>g</h1></div>
+    <div><h1>a</h1></div>
+    <div><h1>l</h1></div>
   </body>
 </html>
